Silence warnings coming from marathon java agent